Split CSS code into components Fix logos being cropped Fix styling

--- a/public/components/AuthPopup/AuthPopup.css
+++ b/public/components/AuthPopup/AuthPopup.css
@@ -1,24 +1,27 @@
 .popup {
     position: fixed;
-    width: 25%;
-    height: 500px;
-    max-height: 700px;
+    width: 400px;
+    height: 520px;
+    min-height: fit-content;
     top: 25%;
     left: 37%;
     background-color: #ffffff;
     border-radius: 10px;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
+    gap: 10px;
 }
 
 .popup input {
+    min-height: 40px;
     padding-left: 8%;
     font-size: 16px;
 }
 
 .popup input::placeholder {
     color: #635B5B;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .auth-img {
@@ -40,7 +43,7 @@
     border: 1px solid black;
     border-radius: 5px;
     height: 8%;
-    font-size: 16px;
+    font-size: 18px;
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 5px;
@@ -50,16 +53,17 @@
     background-color: #FFA552;
     color: #ffffff;
     cursor: pointer;
-    margin: 5% 20% 15%;
+    margin: 5% 20% 10%;
     border: none;
     border-radius: 10px;
-    height: 7%;
+    height: 40px;
+    min-height: 40px;
     font-size: 20px;
     font-weight: bold;
 }
 
 .have-account {
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     padding-bottom: 5%;
     display: flex;
